--- a/css/main.css
+++ b/css/main.css
@@ -248,7 +248,7 @@ button {
   background-color: white;
 }
 .scroll {
-  width: 367px;
+  width: 100%;
   height: 50px;
   position: fixed;
   top: 98px;
@@ -256,6 +256,7 @@ button {
   display: flex;
   align-items: center;
   background-image: linear-gradient(-100deg, white, #9fafff);
+  transition: 0.3s linear;
 }
 .footer {
   height:55px;
